--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">UniqueStyle</string>
     <string name="txt_sign_up_here">Signup here</string>
     <string name="txt_dont_have_an_account">Don\'t have an account?</string>
+    <string name="txt_already_have_an_account">Already have an account?</string>
     <string name="txt_forgot_my_password">Forgot my password</string>
-    <string name="txt_signin">Sign In</string>
+    <string name="txt_sign_in">Sign In</string>
+    <string name="txt_sign_up">Sign Up</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
     <string name="hint_confirm_password">Confirm Password</string>
